--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start" : "node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@slack/bolt": "^3.11.0",
+    "express": "^4.18.0",
     "google-spreadsheet": "^3.2.0",
     "googleapis": "^39.2.0"
   },
