--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "@slack/bolt": "^3.11.0",
     "express": "^4.18.0",
     "google-spreadsheet": "^3.2.0",
-    "googleapis": "^39.2.0"
-  },
-  "devDependencies": {
+    "googleapis": "^39.2.0",
     "dotenv": "^16.0.0"
   }
 }
