--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@slack/bolt": "^3.11.0",
     "express": "^4.18.0",
     "google-spreadsheet": "^3.2.0",
-    "googleapis": "^39.2.0",
     "dotenv": "^16.0.0"
   }
 }
