--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "MIT",
   "dependencies": {
     "@slack/bolt": "^3.11.0",
+    "aws-sdk": "^2.1155.0",
+    "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "google-spreadsheet": "^3.2.0",
-    "dotenv": "^16.0.0"
+    "yargs": "^17.5.1"
   }
 }
