--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -18,6 +18,7 @@ jobs:
           envkey_SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
           envkey_SLACK_SIGNING_SECRET: ${{ secrets.SLACK_SIGNING_SECRET }}
           file_name: .env
+      - name: Log job
         run: |
           echo "The run id is: $GITHUB_RUN_ID" 
           echo "The GitHub Actor's username is: $GITHUB_ACTOR"
