--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -1,13 +1,15 @@
-name: pipeline
-## Triggers the workflow on when there is a push, or
-## pull request on the main branch
+name: Pipeline
+branding:
+  icon: "briefcase"
+  color: "gray-dark"
+
 on: [push]
 
 jobs:
   generate_environment_variables:
     runs-on: ubuntu-latest
     steps:
-      - name: Generate environment variables
+      - name: Make envfile
         uses: SpicyPizza/create-envfile@v1.3.0
         with:
           envkey_DEBUG: true
@@ -18,28 +20,15 @@ jobs:
           envkey_SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
           envkey_SLACK_SIGNING_SECRET: ${{ secrets.SLACK_SIGNING_SECRET }}
           file_name: .env
+          fail_on_empty: true
       - name: Log job
         run: |
           echo "The run id is: $GITHUB_RUN_ID" 
           echo "The GitHub Actor's username is: $GITHUB_ACTOR"
           echo "The API key is:${{secrets.GOOGLE_EMAIL}}"
-  test-filename:
+  test_file:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Make envfile
-        uses: ./
-        with:
-          envkey_DEBUG: false
-          file_name: .other-file
-
       - name: Verify envfile
         run: |
-          TEST=$(cat <<-END
-            DEBUG=false
-          END
-          )
-          if [ "$TEST" != "$(cat .other-file)" ]
-          then
-              echo "ERR"
-          fi
+          cat .env
