test: tentativa de testar o arquivo

--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -26,6 +26,8 @@ jobs:
   test_file:
     runs-on: ubuntu-latest
     steps:
-      - name: Verify envfile
+      - name: Verify directory
+        uses: ./
+      - name: Verify if has file
         run: |
-          cat .env
+          ls -la
