--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -3,7 +3,7 @@ name: Pipeline
 on: [push]
 
 jobs:
-  generate_environment_variables:
+  generate-environment-variables:
     runs-on: ubuntu-latest
     steps:
       - name: Make envfile
@@ -28,3 +28,5 @@ jobs:
           echo "The GitHub Actor's username is: $GITHUB_ACTOR"
           echo "The API key is:${{secrets.GOOGLE_EMAIL}}"
 
+          name: Lint # name of the action (displayed in the github interface)
+ 
