--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^4.18.0",
     "google-spreadsheet": "^3.2.0",
     "yargs": "^17.5.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.18.0"
   }
 }
