feat: added file to create .env file

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,9 +1,10 @@
 name: Lint
 
-on: [pull-request, push]
-pull_request:
-  branches:
-    - master
+on:
+  pull_request:
+    branches: [master]
+  push:
+    branches: [master]
 
 env:
   NODE_VERSION: 14
